crates/lex/src/tests/snapshots/let_char.snap
---
source: crates/lex/src/tests.rs
assertion_line: 120
expression: "(test[1], tokens)"
---
- "let e: char = 'c'"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: e
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        Ident: char
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 13
    - tt:
        Char: c
      line: 1
      column: 15
    - tt:
        Semicolon: true
      line: 1
      column: 16

