crates/lex/src/tests/snapshots/let_double.snap
---
source: crates/lex/src/tests.rs
assertion_line: 120
expression: "(test[1], tokens)"
---
- "let c: double = 8.0"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: c
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        Ident: double
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 15
    - tt:
        Num: "8.0"
      line: 1
      column: 17
    - tt:
        Semicolon: true
      line: 1
      column: 18

