crates/lex/src/tests/snapshots/ops_and_more.snap
---
source: crates/lex/src/tests.rs
assertion_line: 160
expression: "(test[1], tokens)"
---
- x++; y -= 1
- Ok:
    - tt:
        Ident: x
      line: 1
      column: 1
    - tt:
        Op: Inc
      line: 1
      column: 2
    - tt:
        Semicolon: false
      line: 1
      column: 4
    - tt:
        Ident: y
      line: 1
      column: 6
    - tt:
        Op: SubEq
      line: 1
      column: 8
    - tt:
        Num: "1"
      line: 1
      column: 11
    - tt:
        Semicolon: true
      line: 1
      column: 12

